minor url edits

--- a/faq.htm
+++ b/faq.htm
@@ -27,7 +27,7 @@
 
 	<link rel="shortcut icon" type="image/png" href="assets/i/favicon.png">
 
-	<link rel="next" href="http://studentfinanceafrica.com/parents">
+	<link rel="next" href="parents.htm">
 
 	<meta name="application-name" content="SFA">
 	<meta name="msapplication-TileColor" content="#0084CB">
@@ -68,17 +68,17 @@
 		<div class="block block--faq">
 			<section>
 				<article>
-					<h3 id="eligible"><a href="http://studentfinanceafrica.com/faq#eligible">Who is eligible for an SFA loan?</a></h3>
+					<h3 id="eligible"><a href="faq.htm#eligible">Who is eligible for an SFA loan?</a></h3>
 					<p>SFA requires that each student borrower have a parent or guardian who acts as the primary borrower on the loan (this policy can change if the student is a graduate student). Both parties undergo a full credit evaluation administered by SFA and, both parties must be individually approved for the loan to be approved.</p>
 				</article>
 
 				<article>
-					<h3 id="applying"><a href="http://studentfinanceafrica.com/faq#applying">How do I apply for an SFA Loan?</a></h3>
+					<h3 id="applying"><a href="faq.htm#applying">How do I apply for an SFA Loan?</a></h3>
 					<p>Currently, students and parents must access the application through the website.</p>
 				</article>
 
 				<article>
-					<h3 id="structure"><a href="http://studentfinanceafrica.com/faq#structure">How are SFA loans structured?</a></h3>
+					<h3 id="structure"><a href="faq.htm#structure">How are SFA loans structured?</a></h3>
 					<p>SFA lends to students entering their second year or above or to students in specific vocational programs. SFA only lends up to 80% of the required amount for attending the institution.</p>
 
 					<p>Borrowers apply for a loan equivalent to one year of schooling. Once approved, SFA disperses the loan on a term basis directly to the educational institution. SFA continues to disburse funds on behalf of the borrowers each term if monthly payments are received. SFA will renew loans for subsequent years when borrowers are current. Before SFA will disperse any loans, borrowers must pay a "Commitment Fee" to the educational institution.</p><p> 
@@ -96,17 +96,17 @@
 				</article>
 
 				<article>
-					<h3 id="collateral"><a href="http://studentfinanceafrica.com/faq#collateral">Does SFA require collateral for a loan?</a></h3>
+					<h3 id="collateral"><a href="faq.htm#collateral">Does SFA require collateral for a loan?</a></h3>
 					<p>No. SFA understands that collateral requirements are a barrier for many potential borrowers across sub-Saharan Africa and seeks to rely on other methods, such as a cosigner, to facilitate financial access.</p>
 				</article>
 
 				<article>
-					<h3 id="creditworthiness"><a href="http://studentfinanceafrica.com/faq#creditworthiness">How does SFA determine creditworthiness?</a></h3>
+					<h3 id="creditworthiness"><a href="faq.htm#creditworthiness">How does SFA determine creditworthiness?</a></h3>
 					<p>SFA is developing a proprietary credit model to assess potential borrower and co-borrower's ability and willingness to pay. SFA assesses factors such as income (both formal and informal), length of time with employer, business ownership, and standing in the National ID database. SFA also analyzes information about job growth and industry trends to understand the employability of a student post-graduation.</p>
 				</article>
 
 				<article>
-					<h3 id="collections"><a href="http://studentfinanceafrica.com/faq#collections">How does the SFA collections process work?</a></h3>
+					<h3 id="collections"><a href="faq.htm#collections">How does the SFA collections process work?</a></h3>
 					<p>While the student is in school, the student and the primary borrower must make agreed payments on the 30th calendar day of each month.</p>
 				</article>
 			</section>
@@ -116,7 +116,7 @@
 			<section>
 				<h3>Contact &amp; Support</h3>
 				<p class="lead">Student Finance Africa can help you fund your educational dreams and career aspirations.</p>
-				<p><a class="button cta--muted" href="http://studentfinanceafrica.com/faq">FAQ</a> <a class="button cta--info" href="https://bit.ly/sfa-contact" target="_blank">Contact Us</a> <span class="mobile--block mobile--mt1 desktop--pl1"><span class="mobile--capitalize">or</span> email us directly at <a href="mailto:info@studentfinanceafrica.com">info@studentfinanceafrica.com</a></span></p>
+				<p><a class="button cta--muted" href="faq.htm">FAQ</a> <a class="button cta--info" href="https://bit.ly/sfa-contact" target="_blank">Contact Us</a> <span class="mobile--block mobile--mt1 desktop--pl1"><span class="mobile--capitalize">or</span> email us directly at <a href="mailto:info@studentfinanceafrica.com">info@studentfinanceafrica.com</a></span></p>
 				<p>Follow us on <a href="https://www.facebook.com/studentfinanceafrica/" target="_blank">Facebook</a> and <a href="https://twitter.com/SFA_Africa" target="_blank">Twitter</a> </p>
 			</section>
 		</div>
