--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 
 	<link rel="shortcut icon" type="image/png" href="assets/i/favicon.png">
 
-	<link rel="next" href="http://studentfinanceafrica.com/parents">
+	<link rel="next" href="parents.htm">
 
 	<meta name="application-name" content="SFA">
 	<meta name="msapplication-TileColor" content="#0084CB">
@@ -265,7 +265,7 @@
 			<section>
 				<h3>Contact &amp; Support</h3>
 				<p class="lead">Student Finance Africa can help you fund your educational dreams and career aspirations.</p>
-				<p><a class="button cta--muted" href="http://studentfinanceafrica.com/faq">FAQ</a> <a class="button cta--info" href="https://bit.ly/sfa-contact" target="_blank">Contact Us</a> <span class="mobile--block mobile--mt1 desktop--pl1"><span class="mobile--capitalize">or</span> email us directly at <a href="mailto:info@studentfinanceafrica.com">info@studentfinanceafrica.com</a></span></p>
+				<p><a class="button cta--muted" href="faq.htm">FAQ</a> <a class="button cta--info" href="https://bit.ly/sfa-contact" target="_blank">Contact Us</a> <span class="mobile--block mobile--mt1 desktop--pl1"><span class="mobile--capitalize">or</span> email us directly at <a href="mailto:info@studentfinanceafrica.com">info@studentfinanceafrica.com</a></span></p>
 				<p>Follow us on <a href="https://www.facebook.com/studentfinanceafrica/" target="_blank">Facebook</a> and <a href="https://twitter.com/SFA_Africa" target="_blank">Twitter</a> </p>
 			</section>
 		</div>
