--- a/parents.htm
+++ b/parents.htm
@@ -27,7 +27,7 @@
 
 	<link rel="shortcut icon" type="image/png" href="assets/i/favicon.png">
 
-	<link rel="next" href="http://studentfinanceafrica.com/parents">
+	<link rel="next" href="parents.htm">
 
 	<meta name="application-name" content="SFA">
 	<meta name="msapplication-TileColor" content="#0084CB">
@@ -153,7 +153,7 @@
 				</ol>
 
 				<p>
-					To learn more read our <a href="http://studentfinanceafrica.com/faq">Frequently Asked Questions</a> or <a href="https://bit.ly/sfa-contact" target="_blank">Contact Us</a>.
+					To learn more read our <a href="faq.htm">Frequently Asked Questions</a> or <a href="https://bit.ly/sfa-contact" target="_blank">Contact Us</a>.
 				</p>
 			</section>
 		</div>
