fix(*): resolve broken home page links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<div id="page-top">
 		<header id="masthead">
-			<a id="logo" href="index.htm"><img src="https://www.studentfinanceafrica.com/assets/i/sfa-logo.svg" alt="SFA - Student Finance Africa"></a>
+			<a id="logo" href="/"><img src="https://www.studentfinanceafrica.com/assets/i/sfa-logo.svg" alt="SFA - Student Finance Africa"></a>
 			<nav class="nav">
 				<a href="https://www.studentfinanceafrica.com/parents/"><span class="mobile--hide">Are you a </span>Parent / Guardian<span class="mobile--hide">?</span></a>
 			</nav>
