--- a/parents/index.html
+++ b/parents/index.html
@@ -51,7 +51,7 @@
 
 	<div id="page-top">
 		<header id="masthead">
-			<a id="logo" href="index.htm"><img src="https://www.studentfinanceafrica.com/assets/i/sfa-logo.svg" alt="SFA - Student Finance Africa"></a>
+			<a id="logo" href="/"><img src="https://www.studentfinanceafrica.com/assets/i/sfa-logo.svg" alt="SFA - Student Finance Africa"></a>
 			<nav class="nav">
 				<a href="https://www.studentfinanceafrica.com/faq/">F<span class="mobile--hide">requently </span>A<span class="mobile--hide">sked </span>Q<span class="mobile--hide">uestions</span></a>
 			</nav>
